Modifica link menù

--- a/AGAMENNONE.master
+++ b/AGAMENNONE.master
@@ -16,14 +16,14 @@
 
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href="#">Homepage</a>
+            <a class="navbar-brand ps-3" href="../../Default.aspx">Homepage</a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">Logout</a></li>
+                        <li><a class="dropdown-item" href="Login.aspx">Logout</a></li>
                     </ul>
                 </li>
             </ul>
@@ -41,8 +41,8 @@
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="#">Gestione Commesse/Referenti</a>
-                                    <a class="nav-link" href="#">Gestione Clienti</a>
+                                    <a class="nav-link" href="/GestioneCommesseReferenti/CommesseReferenti.aspx">Gestione Commesse/Referenti</a>
+                                    <a class="nav-link" href="/GestioneClienti/Clienti.aspx">Gestione Clienti</a>
                                 </nav>
                             </div>
                             <%--Dipendenti--%>
@@ -53,12 +53,12 @@
                             </a>
                             <div class="collapse" id="collapseLayouts1" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="#">Anagrafica dipendenti</a>
-                                    <a class="nav-link" href="#">Gestione aziende</a>
+                                    <a class="nav-link" href="/GestioneDipendenti/Dipendenti.aspx">Anagrafica dipendenti</a>
+                                    <a class="nav-link" href="/GestioneAziende/Aziende.aspx">Gestione aziende</a>
                                 </nav>
                             </div>
                             <%--Fatture--%>
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="/GestioneFatture/MainFatture.aspx">
                                 <div class="sb-nav-link-icon"><i class="fas fa-wallet"></i></div>
                                 Fatture
                             </a>
@@ -82,10 +82,10 @@
                             
                             <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="#">Visualizzazione log</a>
+                                    <a class="nav-link" href="/GestioneLogs/MainLogs.aspx">Visualizzazione log</a>
                                 </nav>
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="#">Attivazione utenti</a>
+                                    <a class="nav-link" href="/GestioneDipendenti/AbDisDipendenti.aspx">Attivazione utenti</a>
                                 </nav>
                                 <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
                                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth">Gestione aziendale
@@ -93,9 +93,9 @@
                                     </a>
                                     <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                         <nav class="sb-sidenav-menu-nested nav">
-                                            <a class="nav-link" href="login.html">Report Anno/Mese</a>
-                                            <a class="nav-link" href="register.html">Report Dipendenti</a>
-                                            <a class="nav-link" href="password.html">Report Contabilità</a>
+                                            <a class="nav-link" href="/GestioneReport/ReportAnnoMese.aspx">Report Anno/Mese</a>
+                                            <a class="nav-link" href="/GestioneReport/ReportDipendenti.aspx">Report Dipendenti</a>
+                                            <a class="nav-link" href="/GestioneReport/ReportContabilita.aspx">Report Contabilità</a>
                                         </nav>
                                     </div>
                                     <%--<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">Visualizzazione log
@@ -115,7 +115,7 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                                 Fatture
                             </a>--%>
-                            <a class="nav-link" href="tables.html">
+                            <a class="nav-link" href="/CambioPassword/CambioPassword.aspx">
                                 <div class="sb-nav-link-icon"><i class="fas fa-key"></i></div>
                                 Cambia Password
                             </a>
